java REST test added

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 wonky-android-calc
+rest-test-java/.metadata
+rest-test-java/.recommenders
+rest-test-java/RemoteSystemsTempFiles
+rest-test-java/rest/.settings
+rest-test-java/rest/target
 2017June_Tech-Test_QA_Engineer.pdf
 requisitions.txt
